[package]
name = "clean"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0-rc.7", features = ["derive"] }
indicatif = "0.16.2"
lazy_static = "1.4.0"
regex = "1.5"
serde = { version = "1.0.132", features = ["derive"] }
serde_yaml = "0.8.23"
threadpool = "1.8.1"

